completed equip delete route
